fix z-index arrow tooltip

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ a:focus {
     margin: -1px 0 0 0;
     bottom: -8px;
     left: 10px;
+    z-index:11;
 }
 /*Creates a small triangle extender for the tooltip - left */
 .tooltip2:before {
@@ -82,6 +83,7 @@ a:focus {
     margin: -1px 0 0 0;
     bottom: -9px;
     left: 10px;
+    z-index:10;
 }
 .tooltip3:after {
     box-sizing: border-box;
@@ -96,6 +98,7 @@ a:focus {
     margin: -1px 0 0 0;
     bottom: -8px;
     right: 10px;
+    z-index:11;
 }
 .tooltip3:before {
     box-sizing: border-box;
@@ -110,6 +113,7 @@ a:focus {
     margin: -1px 0 0 0;
     bottom: -9px;
     right: 10px;
+    z-index:10;
 }
 
 .yaxis{
